[tool.poetry]
name = "logging_demo"
version = "0.1.0"
description = ""
authors = ["Vivek Vaddina <vaddinavivek@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-json-logger = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
